# swagger.yaml
@@ -1288,7 +1288,7 @@ paths:
   /v1/user/{user_id}/cms/{content_id}?isDownloadable=true:
     get:
       summary: Get Recording Download Link
-      description: This endpoint stops recording for a meeting in progress.
+      description: This endpoint retrieves properties about the recording chapter.
       tags:
         - Recording
       security:
@@ -1301,12 +1301,12 @@ paths:
           type: integer
         - name: content_id
           in: path
-          description: The ID of the meeting you want to view. This is an integer value. You can find this ID by doing a list of meetings and referencing the "id" property.
+          description: The recording properties fetched with other API endpoints will return a compositeContentId or a contentId. That value can be used for this argument.
           required: true
           type: integer
       responses:
         '200':
-          description: The settings for the room
+          description: The results for this content item.
           schema:
             $ref: '#/definitions/Content'
         default:
@@ -1357,7 +1357,7 @@ paths:
           type: string
       responses:
         '200':
-          description: TThe results for this enterprise.
+          description: The results for this enterprise.
           schema:
             $ref: '#/definitions/Meeting'
         default:
@@ -1963,6 +1963,8 @@ definitions:
         type: string
       contentDescription:
         type: string
+      contentUrl:
+        type: string
       userId:
         type: integer
       contentLocation:
@@ -2002,6 +2004,19 @@ definitions:
             type: integer
           hlsUrl:
             type: string
+          levels:
+            type: array
+            items:
+              type: object
+              properties:
+                file:
+                  type: string
+                width:
+                  type: integer
+                bitrate:
+                  type: integer
+                height:
+                  type: integer
   AnalyticsTopUsers:
     type: object
     properties:
